# Social-Media-Sentiment-Analysis

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_VERIFICATION_CHECKLIST.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SECURITY_PERFORMANCE.md  DOCKER_SETUP_SUMMARY.md  Makefile  README.md  app.py  commit_and_push.ps1  deploy.bat  deploy.sh  docker-compose.fastapi.yml  docker-compose.prod.yml  docker-compose.yml  keywords.json  pyproject.toml  requirements.txt  requirment.txt  streamlit.app.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
backend/django_admin/: Dockerfile  Dockerfile.prod  __init__.py  manage.py  requirements.txt
backend/django_admin/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/fastapi_service/: Dockerfile  Dockerfile.prod  __init__.py  requirements.txt
backend/fastapi_service/app/: __init__.py  celery_app.py  dependencies.py  main.py
backend/fastapi_service/scripts/: __init__.py  seed_data.py
frontend/: Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ChartPanel.tsx  EmptyState.tsx  GlassPanel.tsx  MetricCard.tsx  Shell.tsx  Sidebar.tsx  Skeleton.tsx  Topbar.tsx
frontend/src/data/: mock.ts
frontend/src/lib/: api.ts  theme.tsx  types.ts
frontend/src/pages/: Activity.tsx  Admin.tsx  ApiDocs.tsx  Auth.tsx  Dashboard.tsx  Landing.tsx  (+3 more)
infra/monitoring/: prometheus.yml
infra/nginx/: default.conf
shared/: __init__.py  contracts.py  text.py
tests/: test_api.py  test_ml.py
(+55 files in other folders)
