[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-intelligence-platform"
version = "0.1.0"
description = "Production-grade sentiment intelligence SaaS monorepo"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pymysql>=1.1",
  "redis>=5.0",
  "celery>=5.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "orjson>=3.10",
  "structlog>=24.1",
  "numpy>=1.26",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
